# cmake_proj

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt
.github/workflows/: actions.yml
cmake_config/: CMakeLists.txt
cmake_config/assets/: version.cpp
cmake_config/modules/: Findgit.cmake  Findgit1.cmake  Findscf.cmake  packages.cmake
include/: check.h  input.h
src/: CMakeLists.txt  guess.out  main.cpp
src/game/: CMakeLists.txt  check.cpp  game.cpp  game.h  input.cpp
tests/: CMakeLists.txt  test_not_related.cpp  test_range.cpp  test_seed.cpp
